Refactored for React Router, added API calls and defaults.

--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "jquery": "^3.5.1",
     "mongoose": "^5.10.6",
     "nodemon": "^2.0.4",
+    "path": "^0.12.7",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "babel": "^6.23.0",
